--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "clean-node-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "git-commit-msg-linter": "^2.4.4"
-  }
+    "name": "clean-node-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/node": "^14.0.27",
+        "git-commit-msg-linter": "^2.4.4",
+        "typescript": "^3.9.7"
+    }
 }
