--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-standard-with-typescript": "^18.0.2",
@@ -31,5 +32,8 @@
     "lint-staged": "^10.2.11",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "validator": "^13.1.1"
   }
 }
