--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.9",
+    "@types/mongodb": "^3.5.31",
     "@types/node": "^14.0.27",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -36,6 +38,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.2",
     "validator": "^13.1.1"
   }
 }
