--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.9",
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.0.27",
@@ -33,11 +35,13 @@
     "jest": "^26.2.2",
     "jest-cli": "^26.2.2",
     "lint-staged": "^10.2.11",
+    "sucrase": "^3.16.0",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "validator": "^13.1.1"
   }
