--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.9",
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.0.27",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "eslint": "^7.6.0",
@@ -36,6 +37,7 @@
     "jest-cli": "^26.2.2",
     "lint-staged": "^10.2.11",
     "sucrase": "^3.16.0",
+    "supertest": "^5.0.0",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
