chore: enable debug with vscode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
     command: npm start
     volumes:
       - ./dist:/www/clean-node-api/dist
+      - ./package.json:/www/clean-node-api/package.json
     ports:
       - "5050:5050"
+      - "9222:9222"
     links:
       - mongo
