--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     
   api: 
     container_name: api-container
-    build: .
-    image: clean-node-api
+    image: node:12
+    working_dir: /www/clean-node-api
     restart: always
-    command: npm start
+    command: bash -c "npm install --only=prod && npm run debug"
     volumes:
       - ./dist:/www/clean-node-api/dist
       - ./package.json:/www/clean-node-api/package.json
