--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && tsc",
     "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
     "up": "npm run build && docker-compose up -d",
+    "down": "docker-compose down",
     "stop": "docker-compose stop",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
