--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     restart: always
     command: bash -c "npm install --only=prod && npm run debug"
     volumes:
-      - ./dist:/www/clean-node-api/dist
+      - ./dist/:/www/clean-node-api/dist/
       - ./package.json:/www/clean-node-api/package.json
     ports:
       - "5050:5050"
