fix: add new eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
         "project": "./tsconfig.eslint.json"
     },
     "rules": {
-        "@typescript-eslint/strict-boolean-expressions": "off"
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/no-misused-promises": "off"
+
     }
 }
