refactor: change all paths to use modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: mongo-container
     image: mongo:3
     restart: always
+    environment: 
+      - MONGO_URL=mongodb://mongo:27017/clean-node-api
     volumes:
       - ./data:/data/db
     ports:
