--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.0.27",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "coveralls": "^3.1.0",
@@ -57,6 +58,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.2",
     "nodemon": "^2.0.6",
+    "swagger-ui-express": "^4.1.5",
     "validator": "^13.1.1"
   },
   "engines": {
